tests/error_015_unsafe_start_slashslash.test
START
// Comment
b = //
ERROR
.../error_015_unsafe_start_slashslash.input:2:5: error: value cannot start with = /* or //
b = //
    ^
END
